# data_structure_practices

./: CMakeLists.txt  CMakePresets.json  headed_singly_linked_list_main.cpp  polynomial_merger.cpp  sequential_storage_linear_list_main.cpp
include/: headed_singly_linked_list.hpp  polynomial_merger.hpp  sequential_storage_linear_list.hpp
